parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    GLOBAL

Grammar

Rule 0     S' -> program
Rule 1     program -> globalVarDeclar functionDeclar main
Rule 2     globalVarDeclar -> initVarDeclar
Rule 3     initVarDeclar -> varDeclar initVarDeclar
Rule 4     initVarDeclar -> <empty>
Rule 5     functionDeclar -> function functionDeclar
Rule 6     functionDeclar -> <empty>
Rule 7     varDeclar -> vars ;
Rule 8     varDeclar -> ARRAY arrays ;
Rule 9     vars -> type ID = expression moreVar
Rule 10    moreVar -> , ID = expression moreVar
Rule 11    moreVar -> <empty>
Rule 12    type -> INTTYPE
Rule 13    type -> FLOATTYPE
Rule 14    type -> STRINGTYPE
Rule 15    type -> BOOLTYPE
Rule 16    arrays -> array moreArray
Rule 17    array -> type ID [ INT ] = { expression sumExpCount moreExp }
Rule 18    moreExp -> , expression sumExpCount moreExp
Rule 19    moreExp -> <empty>
Rule 20    sumExpCount -> <empty>
Rule 21    moreArray -> nextArray moreArray
Rule 22    moreArray -> <empty>
Rule 23    nextArray -> , ID [ INT ] = { expression sumExpCount moreExp }
Rule 24    function -> FUNCTION funcType ID ( par ) { block RETURN returnType ; }
Rule 25    funcType -> INTTYPE
Rule 26    funcType -> FLOATTYPE
Rule 27    funcType -> STRINGTYPE
Rule 28    funcType -> BOOLTYPE
Rule 29    funcType -> VOID
Rule 30    returnType -> expression
Rule 31    returnType -> VOID
Rule 32    main -> MAIN ( par ) { block }
Rule 33    par -> type ID morePar
Rule 34    par -> <empty>
Rule 35    morePar -> , type ID morePar
Rule 36    morePar -> <empty>
Rule 37    funcCall -> ID ( parIn )
Rule 38    parIn -> expression moreParIn
Rule 39    parIn -> <empty>
Rule 40    moreParIn -> , expression moreParIn
Rule 41    moreParIn -> <empty>
Rule 42    block -> varDeclar block
Rule 43    block -> assign ; block
Rule 44    block -> conditional block
Rule 45    block -> loop block
Rule 46    block -> funcCall ; block
Rule 47    block -> output block
Rule 48    block -> input block
Rule 49    block -> <empty>
Rule 50    loopBlock -> assign ; loopBlock
Rule 51    loopBlock -> conditional loopBlock
Rule 52    loopBlock -> loop loopBlock
Rule 53    loopBlock -> funcCall ; loopBlock
Rule 54    loopBlock -> output loopBlock
Rule 55    loopBlock -> input loopBlock
Rule 56    loopBlock -> <empty>
Rule 57    assign -> ID possibleArray = expression
Rule 58    possibleArray -> [ exp ]
Rule 59    possibleArray -> <empty>
Rule 60    conditional -> IF ( expression ) { block } possibleElif possibleElse
Rule 61    possibleElif -> ELIF ( expression ) { block } possibleElif
Rule 62    possibleElif -> <empty>
Rule 63    possibleElse -> ELSE { block }
Rule 64    possibleElse -> <empty>
Rule 65    output -> CONSOLE ( expression ) ;
Rule 66    loop -> for
Rule 67    loop -> while
Rule 68    loop -> doWhile
Rule 69    for -> FOR ( expression ; assign ) { loopBlock }
Rule 70    while -> WHILE ( expression ) { loopBlock }
Rule 71    doWhile -> DO { loopBlock } WHILE ( expression ) ;
Rule 72    expression -> higherExp possibleHigherExp
Rule 73    possibleHigherExp -> possibleHigherExpOp higherExp
Rule 74    possibleHigherExp -> <empty>
Rule 75    possibleHigherExpOp -> AND
Rule 76    possibleHigherExpOp -> OR
Rule 77    higherExp -> exp possibleExp
Rule 78    possibleExp -> possibleExpOp exp
Rule 79    possibleExp -> <empty>
Rule 80    possibleExpOp -> LESS
Rule 81    possibleExpOp -> GREATER
Rule 82    possibleExpOp -> LESSEQUAL
Rule 83    possibleExpOp -> GREATEREQUAL
Rule 84    possibleExpOp -> DIFFERENT
Rule 85    possibleExpOp -> EQUALTO
Rule 86    exp -> possibleSign term possibleTerms
Rule 87    possibleTerms -> possibleTermOp possibleSign term possibleTerms
Rule 88    possibleTerms -> <empty>
Rule 89    possibleSign -> +
Rule 90    possibleSign -> -
Rule 91    possibleSign -> <empty>
Rule 92    possibleTermOp -> +
Rule 93    possibleTermOp -> -
Rule 94    term -> factor possibleFactors
Rule 95    possibleFactors -> possibleFactorOp factor possibleFactors
Rule 96    possibleFactors -> <empty>
Rule 97    possibleFactorOp -> *
Rule 98    possibleFactorOp -> /
Rule 99    possibleFactorOp -> %
Rule 100   factor -> lPar expression rPar
Rule 101   factor -> data
Rule 102   lPar -> (
Rule 103   rPar -> )
Rule 104   data -> ID possibleIdCall
Rule 105   data -> constant
Rule 106   data -> input
Rule 107   possibleIdCall -> [ expression ]
Rule 108   possibleIdCall -> ( parIn )
Rule 109   possibleIdCall -> <empty>
Rule 110   constant -> INT
Rule 111   constant -> FLOAT
Rule 112   constant -> TRUE
Rule 113   constant -> FALSE
Rule 114   constant -> STRING
Rule 115   input -> INPUT ( inputPar )
Rule 116   inputPar -> STRING
Rule 117   inputPar -> <empty>

Terminals, with rules where they appear

%                    : 99
(                    : 24 32 37 60 61 65 69 70 71 102 108 115
)                    : 24 32 37 60 61 65 69 70 71 103 108 115
*                    : 97
+                    : 89 92
,                    : 10 18 23 35 40
-                    : 90 93
/                    : 98
;                    : 7 8 24 43 46 50 53 65 69 71
=                    : 9 10 17 23 57
AND                  : 75
ARRAY                : 8
BOOLTYPE             : 15 28
CONSOLE              : 65
DIFFERENT            : 84
DO                   : 71
ELIF                 : 61
ELSE                 : 63
EQUALTO              : 85
FALSE                : 113
FLOAT                : 111
FLOATTYPE            : 13 26
FOR                  : 69
FUNCTION             : 24
GLOBAL               : 
GREATER              : 81
GREATEREQUAL         : 83
ID                   : 9 10 17 23 24 33 35 37 57 104
IF                   : 60
INPUT                : 115
INT                  : 17 23 110
INTTYPE              : 12 25
LESS                 : 80
LESSEQUAL            : 82
MAIN                 : 32
OR                   : 76
RETURN               : 24
STRING               : 114 116
STRINGTYPE           : 14 27
TRUE                 : 112
VOID                 : 29 31
WHILE                : 70 71
[                    : 17 23 58 107
]                    : 17 23 58 107
error                : 
{                    : 17 23 24 32 60 61 63 69 70 71
}                    : 17 23 24 32 60 61 63 69 70 71

Nonterminals, with rules where they appear

array                : 16
arrays               : 8
assign               : 43 50 69
block                : 24 32 42 43 44 45 46 47 48 60 61 63
conditional          : 44 51
constant             : 105
data                 : 101
doWhile              : 68
exp                  : 58 77 78
expression           : 9 10 17 18 23 30 38 40 57 60 61 65 69 70 71 100 107
factor               : 94 95
for                  : 66
funcCall             : 46 53
funcType             : 24
function             : 5
functionDeclar       : 1 5
globalVarDeclar      : 1
higherExp            : 72 73
initVarDeclar        : 2 3
input                : 48 55 106
inputPar             : 115
lPar                 : 100
loop                 : 45 52
loopBlock            : 50 51 52 53 54 55 69 70 71
main                 : 1
moreArray            : 16 21
moreExp              : 17 18 23
morePar              : 33 35
moreParIn            : 38 40
moreVar              : 9 10
nextArray            : 21
output               : 47 54
par                  : 24 32
parIn                : 37 108
possibleArray        : 57
possibleElif         : 60 61
possibleElse         : 60
possibleExp          : 77
possibleExpOp        : 78
possibleFactorOp     : 95
possibleFactors      : 94 95
possibleHigherExp    : 72
possibleHigherExpOp  : 73
possibleIdCall       : 104
possibleSign         : 86 87
possibleTermOp       : 87
possibleTerms        : 86 87
program              : 0
rPar                 : 100
returnType           : 24
sumExpCount          : 17 18 23
term                 : 86 87
type                 : 9 17 33 35
varDeclar            : 3 42
vars                 : 7
while                : 67

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . globalVarDeclar functionDeclar main
    (2) globalVarDeclar -> . initVarDeclar
    (3) initVarDeclar -> . varDeclar initVarDeclar
    (4) initVarDeclar -> .
    (7) varDeclar -> . vars ;
    (8) varDeclar -> . ARRAY arrays ;
    (9) vars -> . type ID = expression moreVar
    (12) type -> . INTTYPE
    (13) type -> . FLOATTYPE
    (14) type -> . STRINGTYPE
    (15) type -> . BOOLTYPE

    FUNCTION        reduce using rule 4 (initVarDeclar -> .)
    MAIN            reduce using rule 4 (initVarDeclar -> .)
    ARRAY           shift and go to state 6
    INTTYPE         shift and go to state 3
    FLOATTYPE       shift and go to state 5
    STRINGTYPE      shift and go to state 2
    BOOLTYPE        shift and go to state 1

    vars                           shift and go to state 4
    globalVarDeclar                shift and go to state 7
    program                        shift and go to state 8
    initVarDeclar                  shift and go to state 9
    type                           shift and go to state 10
    varDeclar                      shift and go to state 11

state 1

    (15) type -> BOOLTYPE .

    ID              reduce using rule 15 (type -> BOOLTYPE .)


state 2

    (14) type -> STRINGTYPE .

    ID              reduce using rule 14 (type -> STRINGTYPE .)


state 3

    (12) type -> INTTYPE .

    ID              reduce using rule 12 (type -> INTTYPE .)


state 4

    (7) varDeclar -> vars . ;

    ;               shift and go to state 12


state 5

    (13) type -> FLOATTYPE .

    ID              reduce using rule 13 (type -> FLOATTYPE .)


state 6

    (8) varDeclar -> ARRAY . arrays ;
    (16) arrays -> . array moreArray
    (17) array -> . type ID [ INT ] = { expression sumExpCount moreExp }
    (12) type -> . INTTYPE
    (13) type -> . FLOATTYPE
    (14) type -> . STRINGTYPE
    (15) type -> . BOOLTYPE

    INTTYPE         shift and go to state 3
    FLOATTYPE       shift and go to state 5
    STRINGTYPE      shift and go to state 2
    BOOLTYPE        shift and go to state 1

    arrays                         shift and go to state 13
    type                           shift and go to state 14
    array                          shift and go to state 15

state 7

    (1) program -> globalVarDeclar . functionDeclar main
    (5) functionDeclar -> . function functionDeclar
    (6) functionDeclar -> .
    (24) function -> . FUNCTION funcType ID ( par ) { block RETURN returnType ; }

    MAIN            reduce using rule 6 (functionDeclar -> .)
    FUNCTION        shift and go to state 17

    function                       shift and go to state 16
    functionDeclar                 shift and go to state 18

state 8

    (0) S' -> program .



state 9

    (2) globalVarDeclar -> initVarDeclar .

    FUNCTION        reduce using rule 2 (globalVarDeclar -> initVarDeclar .)
    MAIN            reduce using rule 2 (globalVarDeclar -> initVarDeclar .)


state 10

    (9) vars -> type . ID = expression moreVar

    ID              shift and go to state 19


state 11

    (3) initVarDeclar -> varDeclar . initVarDeclar
    (3) initVarDeclar -> . varDeclar initVarDeclar
    (4) initVarDeclar -> .
    (7) varDeclar -> . vars ;
    (8) varDeclar -> . ARRAY arrays ;
    (9) vars -> . type ID = expression moreVar
    (12) type -> . INTTYPE
    (13) type -> . FLOATTYPE
    (14) type -> . STRINGTYPE
    (15) type -> . BOOLTYPE

    FUNCTION        reduce using rule 4 (initVarDeclar -> .)
    MAIN            reduce using rule 4 (initVarDeclar -> .)
    ARRAY           shift and go to state 6
    INTTYPE         shift and go to state 3
    FLOATTYPE       shift and go to state 5
    STRINGTYPE      shift and go to state 2
    BOOLTYPE        shift and go to state 1

    vars                           shift and go to state 4
    initVarDeclar                  shift and go to state 20
    varDeclar                      shift and go to state 11
    type                           shift and go to state 10

state 12

    (7) varDeclar -> vars ; .

    ARRAY           reduce using rule 7 (varDeclar -> vars ; .)
    ID              reduce using rule 7 (varDeclar -> vars ; .)
    IF              reduce using rule 7 (varDeclar -> vars ; .)
    CONSOLE         reduce using rule 7 (varDeclar -> vars ; .)
    INPUT           reduce using rule 7 (varDeclar -> vars ; .)
    FOR             reduce using rule 7 (varDeclar -> vars ; .)
    WHILE           reduce using rule 7 (varDeclar -> vars ; .)
    DO              reduce using rule 7 (varDeclar -> vars ; .)
    INTTYPE         reduce using rule 7 (varDeclar -> vars ; .)
    FLOATTYPE       reduce using rule 7 (varDeclar -> vars ; .)
    STRINGTYPE      reduce using rule 7 (varDeclar -> vars ; .)
    BOOLTYPE        reduce using rule 7 (varDeclar -> vars ; .)
    }               reduce using rule 7 (varDeclar -> vars ; .)
    RETURN          reduce using rule 7 (varDeclar -> vars ; .)
    FUNCTION        reduce using rule 7 (varDeclar -> vars ; .)
    MAIN            reduce using rule 7 (varDeclar -> vars ; .)


state 13

    (8) varDeclar -> ARRAY arrays . ;

    ;               shift and go to state 21


state 14

    (17) array -> type . ID [ INT ] = { expression sumExpCount moreExp }

    ID              shift and go to state 22


state 15

    (16) arrays -> array . moreArray
    (21) moreArray -> . nextArray moreArray
    (22) moreArray -> .
    (23) nextArray -> . , ID [ INT ] = { expression sumExpCount moreExp }

    ;               reduce using rule 22 (moreArray -> .)
    ,               shift and go to state 24

    moreArray                      shift and go to state 23
    nextArray                      shift and go to state 25

state 16

    (5) functionDeclar -> function . functionDeclar
    (5) functionDeclar -> . function functionDeclar
    (6) functionDeclar -> .
    (24) function -> . FUNCTION funcType ID ( par ) { block RETURN returnType ; }

    MAIN            reduce using rule 6 (functionDeclar -> .)
    FUNCTION        shift and go to state 17

    function                       shift and go to state 16
    functionDeclar                 shift and go to state 26

state 17

    (24) function -> FUNCTION . funcType ID ( par ) { block RETURN returnType ; }
    (25) funcType -> . INTTYPE
    (26) funcType -> . FLOATTYPE
    (27) funcType -> . STRINGTYPE
    (28) funcType -> . BOOLTYPE
    (29) funcType -> . VOID

    INTTYPE         shift and go to state 32
    FLOATTYPE       shift and go to state 28
    STRINGTYPE      shift and go to state 27
    BOOLTYPE        shift and go to state 31
    VOID            shift and go to state 30

    funcType                       shift and go to state 29

state 18

    (1) program -> globalVarDeclar functionDeclar . main
    (32) main -> . MAIN ( par ) { block }

    MAIN            shift and go to state 34

    main                           shift and go to state 33

state 19

    (9) vars -> type ID . = expression moreVar

    =               shift and go to state 35


state 20

    (3) initVarDeclar -> varDeclar initVarDeclar .

    FUNCTION        reduce using rule 3 (initVarDeclar -> varDeclar initVarDeclar .)
    MAIN            reduce using rule 3 (initVarDeclar -> varDeclar initVarDeclar .)


state 21

    (8) varDeclar -> ARRAY arrays ; .

    ARRAY           reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    ID              reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    IF              reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    CONSOLE         reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    INPUT           reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    FOR             reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    WHILE           reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    DO              reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    INTTYPE         reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    FLOATTYPE       reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    STRINGTYPE      reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    BOOLTYPE        reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    }               reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    RETURN          reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    FUNCTION        reduce using rule 8 (varDeclar -> ARRAY arrays ; .)
    MAIN            reduce using rule 8 (varDeclar -> ARRAY arrays ; .)


state 22

    (17) array -> type ID . [ INT ] = { expression sumExpCount moreExp }

    [               shift and go to state 36


state 23

    (16) arrays -> array moreArray .

    ;               reduce using rule 16 (arrays -> array moreArray .)


state 24

    (23) nextArray -> , . ID [ INT ] = { expression sumExpCount moreExp }

    ID              shift and go to state 37


state 25

    (21) moreArray -> nextArray . moreArray
    (21) moreArray -> . nextArray moreArray
    (22) moreArray -> .
    (23) nextArray -> . , ID [ INT ] = { expression sumExpCount moreExp }

    ;               reduce using rule 22 (moreArray -> .)
    ,               shift and go to state 24

    moreArray                      shift and go to state 38
    nextArray                      shift and go to state 25

state 26

    (5) functionDeclar -> function functionDeclar .

    MAIN            reduce using rule 5 (functionDeclar -> function functionDeclar .)


state 27

    (27) funcType -> STRINGTYPE .

    ID              reduce using rule 27 (funcType -> STRINGTYPE .)


state 28

    (26) funcType -> FLOATTYPE .

    ID              reduce using rule 26 (funcType -> FLOATTYPE .)


state 29

    (24) function -> FUNCTION funcType . ID ( par ) { block RETURN returnType ; }

    ID              shift and go to state 39


state 30

    (29) funcType -> VOID .

    ID              reduce using rule 29 (funcType -> VOID .)


state 31

    (28) funcType -> BOOLTYPE .

    ID              reduce using rule 28 (funcType -> BOOLTYPE .)


state 32

    (25) funcType -> INTTYPE .

    ID              reduce using rule 25 (funcType -> INTTYPE .)


state 33

    (1) program -> globalVarDeclar functionDeclar main .

    $end            reduce using rule 1 (program -> globalVarDeclar functionDeclar main .)


state 34

    (32) main -> MAIN . ( par ) { block }

    (               shift and go to state 40


state 35

    (9) vars -> type ID = . expression moreVar
    (72) expression -> . higherExp possibleHigherExp
    (77) higherExp -> . exp possibleExp
    (86) exp -> . possibleSign term possibleTerms
    (89) possibleSign -> . +
    (90) possibleSign -> . -
    (91) possibleSign -> .

    +               shift and go to state 42
    -               shift and go to state 43
    (               reduce using rule 91 (possibleSign -> .)
    ID              reduce using rule 91 (possibleSign -> .)
    INT             reduce using rule 91 (possibleSign -> .)
    FLOAT           reduce using rule 91 (possibleSign -> .)
    TRUE            reduce using rule 91 (possibleSign -> .)
    FALSE           reduce using rule 91 (possibleSign -> .)
    STRING          reduce using rule 91 (possibleSign -> .)
    INPUT           reduce using rule 91 (possibleSign -> .)

    higherExp                      shift and go to state 44
    possibleSign                   shift and go to state 45
    exp                            shift and go to state 46
    expression                     shift and go to state 41

state 36

    (17) array -> type ID [ . INT ] = { expression sumExpCount moreExp }

    INT             shift and go to state 47


state 37

    (23) nextArray -> , ID . [ INT ] = { expression sumExpCount moreExp }

    [               shift and go to state 48


state 38

    (21) moreArray -> nextArray moreArray .

    ;               reduce using rule 21 (moreArray -> nextArray moreArray .)


state 39

    (24) function -> FUNCTION funcType ID . ( par ) { block RETURN returnType ; }

    (               shift and go to state 49


state 40

    (32) main -> MAIN ( . par ) { block }
    (33) par -> . type ID morePar
    (34) par -> .
    (12) type -> . INTTYPE
    (13) type -> . FLOATTYPE
    (14) type -> . STRINGTYPE
    (15) type -> . BOOLTYPE

    )               reduce using rule 34 (par -> .)
    INTTYPE         shift and go to state 3
    FLOATTYPE       shift and go to state 5
    STRINGTYPE      shift and go to state 2
    BOOLTYPE        shift and go to state 1

    par                            shift and go to state 50
    type                           shift and go to state 51

state 41

    (9) vars -> type ID = expression . moreVar
    (10) moreVar -> . , ID = expression moreVar
    (11) moreVar -> .

    ,               shift and go to state 53
    ;               reduce using rule 11 (moreVar -> .)

    moreVar                        shift and go to state 52

state 42

    (89) possibleSign -> + .

    (               reduce using rule 89 (possibleSign -> + .)
    ID              reduce using rule 89 (possibleSign -> + .)
    INT             reduce using rule 89 (possibleSign -> + .)
    FLOAT           reduce using rule 89 (possibleSign -> + .)
    TRUE            reduce using rule 89 (possibleSign -> + .)
    FALSE           reduce using rule 89 (possibleSign -> + .)
    STRING          reduce using rule 89 (possibleSign -> + .)
    INPUT           reduce using rule 89 (possibleSign -> + .)


state 43

    (90) possibleSign -> - .

    (               reduce using rule 90 (possibleSign -> - .)
    ID              reduce using rule 90 (possibleSign -> - .)
    INT             reduce using rule 90 (possibleSign -> - .)
    FLOAT           reduce using rule 90 (possibleSign -> - .)
    TRUE            reduce using rule 90 (possibleSign -> - .)
    FALSE           reduce using rule 90 (possibleSign -> - .)
    STRING          reduce using rule 90 (possibleSign -> - .)
    INPUT           reduce using rule 90 (possibleSign -> - .)


state 44

    (72) expression -> higherExp . possibleHigherExp
    (73) possibleHigherExp -> . possibleHigherExpOp higherExp
    (74) possibleHigherExp -> .
    (75) possibleHigherExpOp -> . AND
    (76) possibleHigherExpOp -> . OR

    ,               reduce using rule 74 (possibleHigherExp -> .)
    ;               reduce using rule 74 (possibleHigherExp -> .)
    )               reduce using rule 74 (possibleHigherExp -> .)
    ]               reduce using rule 74 (possibleHigherExp -> .)
    }               reduce using rule 74 (possibleHigherExp -> .)
    AND             shift and go to state 54
    OR              shift and go to state 57

    possibleHigherExpOp            shift and go to state 55
    possibleHigherExp              shift and go to state 56

state 45

    (86) exp -> possibleSign . term possibleTerms
    (94) term -> . factor possibleFactors
    (100) factor -> . lPar expression rPar
    (101) factor -> . data
    (102) lPar -> . (
    (104) data -> . ID possibleIdCall
    (105) data -> . constant
    (106) data -> . input
    (110) constant -> . INT
    (111) constant -> . FLOAT
    (112) constant -> . TRUE
    (113) constant -> . FALSE
    (114) constant -> . STRING
    (115) input -> . INPUT ( inputPar )

    (               shift and go to state 71
    ID              shift and go to state 62
    INT             shift and go to state 69
    FLOAT           shift and go to state 70
    TRUE            shift and go to state 59
    FALSE           shift and go to state 68
    STRING          shift and go to state 65
    INPUT           shift and go to state 66

    lPar                           shift and go to state 60
    term                           shift and go to state 67
    constant                       shift and go to state 58
    data                           shift and go to state 61
    factor                         shift and go to state 63
    input                          shift and go to state 64

state 46

    (77) higherExp -> exp . possibleExp
    (78) possibleExp -> . possibleExpOp exp
    (79) possibleExp -> .
    (80) possibleExpOp -> . LESS
    (81) possibleExpOp -> . GREATER
    (82) possibleExpOp -> . LESSEQUAL
    (83) possibleExpOp -> . GREATEREQUAL
    (84) possibleExpOp -> . DIFFERENT
    (85) possibleExpOp -> . EQUALTO

    AND             reduce using rule 79 (possibleExp -> .)
    OR              reduce using rule 79 (possibleExp -> .)
    ,               reduce using rule 79 (possibleExp -> .)
    ;               reduce using rule 79 (possibleExp -> .)
    )               reduce using rule 79 (possibleExp -> .)
    ]               reduce using rule 79 (possibleExp -> .)
    }               reduce using rule 79 (possibleExp -> .)
    LESS            shift and go to state 75
    GREATER         shift and go to state 73
    LESSEQUAL       shift and go to state 79
    GREATEREQUAL    shift and go to state 72
    DIFFERENT       shift and go to state 78
    EQUALTO         shift and go to state 77

    possibleExp                    shift and go to state 76
    possibleExpOp                  shift and go to state 74

state 47

    (17) array -> type ID [ INT . ] = { expression sumExpCount moreExp }

    ]               shift and go to state 80


state 48

    (23) nextArray -> , ID [ . INT ] = { expression sumExpCount moreExp }

    INT             shift and go to state 81


state 49

    (24) function -> FUNCTION funcType ID ( . par ) { block RETURN returnType ; }
    (33) par -> . type ID morePar
    (34) par -> .
    (12) type -> . INTTYPE
    (13) type -> . FLOATTYPE
    (14) type -> . STRINGTYPE
    (15) type -> . BOOLTYPE

    )               reduce using rule 34 (par -> .)
    INTTYPE         shift and go to state 3
    FLOATTYPE       shift and go to state 5
    STRINGTYPE      shift and go to state 2
    BOOLTYPE        shift and go to state 1

    par                            shift and go to state 82
    type                           shift and go to state 51

state 50

    (32) main -> MAIN ( par . ) { block }

    )               shift and go to state 83


state 51

    (33) par -> type . ID morePar

    ID              shift and go to state 84


state 52

    (9) vars -> type ID = expression moreVar .

    ;               reduce using rule 9 (vars -> type ID = expression moreVar .)


state 53

    (10) moreVar -> , . ID = expression moreVar

    ID              shift and go to state 85


state 54

    (75) possibleHigherExpOp -> AND .

    +               reduce using rule 75 (possibleHigherExpOp -> AND .)
    -               reduce using rule 75 (possibleHigherExpOp -> AND .)
    (               reduce using rule 75 (possibleHigherExpOp -> AND .)
    ID              reduce using rule 75 (possibleHigherExpOp -> AND .)
    INT             reduce using rule 75 (possibleHigherExpOp -> AND .)
    FLOAT           reduce using rule 75 (possibleHigherExpOp -> AND .)
    TRUE            reduce using rule 75 (possibleHigherExpOp -> AND .)
    FALSE           reduce using rule 75 (possibleHigherExpOp -> AND .)
    STRING          reduce using rule 75 (possibleHigherExpOp -> AND .)
    INPUT           reduce using rule 75 (possibleHigherExpOp -> AND .)


state 55

    (73) possibleHigherExp -> possibleHigherExpOp . higherExp
    (77) higherExp -> . exp possibleExp
    (86) exp -> . possibleSign term possibleTerms
    (89) possibleSign -> . +
    (90) possibleSign -> . -
    (91) possibleSign -> .

    +               shift and go to state 42
    -               shift and go to state 43
    (               reduce using rule 91 (possibleSign -> .)
    ID              reduce using rule 91 (possibleSign -> .)
    INT             reduce using rule 91 (possibleSign -> .)
    FLOAT           reduce using rule 91 (possibleSign -> .)
    TRUE            reduce using rule 91 (possibleSign -> .)
    FALSE           reduce using rule 91 (possibleSign -> .)
    STRING          reduce using rule 91 (possibleSign -> .)
    INPUT           reduce using rule 91 (possibleSign -> .)

    higherExp                      shift and go to state 86
    possibleSign                   shift and go to state 45
    exp                            shift and go to state 46

state 56

    (72) expression -> higherExp possibleHigherExp .

    )               reduce using rule 72 (expression -> higherExp possibleHigherExp .)
    ;               reduce using rule 72 (expression -> higherExp possibleHigherExp .)
    ,               reduce using rule 72 (expression -> higherExp possibleHigherExp .)
    }               reduce using rule 72 (expression -> higherExp possibleHigherExp .)
    ]               reduce using rule 72 (expression -> higherExp possibleHigherExp .)


state 57

    (76) possibleHigherExpOp -> OR .

    +               reduce using rule 76 (possibleHigherExpOp -> OR .)
    -               reduce using rule 76 (possibleHigherExpOp -> OR .)
    (               reduce using rule 76 (possibleHigherExpOp -> OR .)
    ID              reduce using rule 76 (possibleHigherExpOp -> OR .)
    INT             reduce using rule 76 (possibleHigherExpOp -> OR .)
    FLOAT           reduce using rule 76 (possibleHigherExpOp -> OR .)
    TRUE            reduce using rule 76 (possibleHigherExpOp -> OR .)
    FALSE           reduce using rule 76 (possibleHigherExpOp -> OR .)
    STRING          reduce using rule 76 (possibleHigherExpOp -> OR .)
    INPUT           reduce using rule 76 (possibleHigherExpOp -> OR .)


state 58

    (105) data -> constant .

    *               reduce using rule 105 (data -> constant .)
    /               reduce using rule 105 (data -> constant .)
    %               reduce using rule 105 (data -> constant .)
    +               reduce using rule 105 (data -> constant .)
    -               reduce using rule 105 (data -> constant .)
    LESS            reduce using rule 105 (data -> constant .)
    GREATER         reduce using rule 105 (data -> constant .)
    LESSEQUAL       reduce using rule 105 (data -> constant .)
    GREATEREQUAL    reduce using rule 105 (data -> constant .)
    DIFFERENT       reduce using rule 105 (data -> constant .)
    EQUALTO         reduce using rule 105 (data -> constant .)
    AND             reduce using rule 105 (data -> constant .)
    OR              reduce using rule 105 (data -> constant .)
    ,               reduce using rule 105 (data -> constant .)
    ;               reduce using rule 105 (data -> constant .)
    )               reduce using rule 105 (data -> constant .)
    ]               reduce using rule 105 (data -> constant .)
    }               reduce using rule 105 (data -> constant .)


state 59

    (112) constant -> TRUE .

    *               reduce using rule 112 (constant -> TRUE .)
    /               reduce using rule 112 (constant -> TRUE .)
    %               reduce using rule 112 (constant -> TRUE .)
    +               reduce using rule 112 (constant -> TRUE .)
    -               reduce using rule 112 (constant -> TRUE .)
    LESS            reduce using rule 112 (constant -> TRUE .)
    GREATER         reduce using rule 112 (constant -> TRUE .)
    LESSEQUAL       reduce using rule 112 (constant -> TRUE .)
    GREATEREQUAL    reduce using rule 112 (constant -> TRUE .)
    DIFFERENT       reduce using rule 112 (constant -> TRUE .)
    EQUALTO         reduce using rule 112 (constant -> TRUE .)
    AND             reduce using rule 112 (constant -> TRUE .)
    OR              reduce using rule 112 (constant -> TRUE .)
    ,               reduce using rule 112 (constant -> TRUE .)
    ;               reduce using rule 112 (constant -> TRUE .)
    )               reduce using rule 112 (constant -> TRUE .)
    ]               reduce using rule 112 (constant -> TRUE .)
    }               reduce using rule 112 (constant -> TRUE .)


state 60

    (100) factor -> lPar . expression rPar
    (72) expression -> . higherExp possibleHigherExp
    (77) higherExp -> . exp possibleExp
    (86) exp -> . possibleSign term possibleTerms
    (89) possibleSign -> . +
    (90) possibleSign -> . -
    (91) possibleSign -> .

    +               shift and go to state 42
    -               shift and go to state 43
    (               reduce using rule 91 (possibleSign -> .)
    ID              reduce using rule 91 (possibleSign -> .)
    INT             reduce using rule 91 (possibleSign -> .)
    FLOAT           reduce using rule 91 (possibleSign -> .)
    TRUE            reduce using rule 91 (possibleSign -> .)
    FALSE           reduce using rule 91 (possibleSign -> .)
    STRING          reduce using rule 91 (possibleSign -> .)
    INPUT           reduce using rule 91 (possibleSign -> .)

    higherExp                      shift and go to state 44
    possibleSign                   shift and go to state 45
    exp                            shift and go to state 46
    expression                     shift and go to state 87

state 61

    (101) factor -> data .

    *               reduce using rule 101 (factor -> data .)
    /               reduce using rule 101 (factor -> data .)
    %               reduce using rule 101 (factor -> data .)
    +               reduce using rule 101 (factor -> data .)
    -               reduce using rule 101 (factor -> data .)
    LESS            reduce using rule 101 (factor -> data .)
    GREATER         reduce using rule 101 (factor -> data .)
    LESSEQUAL       reduce using rule 101 (factor -> data .)
    GREATEREQUAL    reduce using rule 101 (factor -> data .)
    DIFFERENT       reduce using rule 101 (factor -> data .)
    EQUALTO         reduce using rule 101 (factor -> data .)
    AND             reduce using rule 101 (factor -> data .)
    OR              reduce using rule 101 (factor -> data .)
    ,               reduce using rule 101 (factor -> data .)
    ;               reduce using rule 101 (factor -> data .)
    )               reduce using rule 101 (factor -> data .)
    ]               reduce using rule 101 (factor -> data .)
    }               reduce using rule 101 (factor -> data .)


state 62

    (104) data -> ID . possibleIdCall
    (107) possibleIdCall -> . [ expression ]
    (108) possibleIdCall -> . ( parIn )
    (109) possibleIdCall -> .
